<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/website_button"
        android:text="@string/go_to_website"
        android:textSize="8pt"
        android:textColor="#287AA9"
        android:background="#fff"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/call_button"
        android:text="@string/call_phone"
        android:textSize="8pt"
        android:textColor="#287AA9"
        android:background="#fff"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/directions_button"
        android:text="@string/directions"
        android:textSize="8pt"
        android:textColor="#287AA9"
        android:background="#fff"
        android:textAllCaps="false"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itinerary_button"
        android:text="@string/add_to_itinerary"
        android:textSize="8pt"
        android:textColor="#287AA9"
        android:background="#fff"
        android:textAllCaps="false"/>
</LinearLayout>