<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/price_level_filter_options"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RadioButton
        android:id="@+id/price_level_one_filter"
        android:layout_width="wrap_content"
        android:text="@string/price_level_one"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:id="@+id/price_level_two_filter"
        android:layout_width="wrap_content"
        android:text="@string/price_level_two"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:id="@+id/price_level_three_filter"
        android:layout_width="wrap_content"
        android:text="@string/price_level_three"
        android:layout_height="wrap_content"/>
</RadioGroup>