<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="55dip"
              android:orientation="vertical" >
<!--<RadioGroup-->
            <!--android:id="@+id/category_filter_options"-->
              <!--android:orientation="vertical"-->
              <!--android:layout_width="match_parent"-->
              <!--android:layout_height="match_parent">-->
    <RadioButton
        android:id="@+id/attraction_filter"
        android:layout_width="wrap_content"
        android:text="@string/attractions"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:id="@+id/dining_filter"
        android:layout_width="wrap_content"
        android:text="@string/dining"
        android:layout_height="wrap_content"/>
    <RadioButton
        android:id="@+id/accommodation_filter"
        android:layout_width="wrap_content"
        android:text="@string/accommodation"
        android:layout_height="wrap_content"/>
<!--</RadioGroup>-->
    </LinearLayout>