<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/budget_multiplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_people"/>
        <EditText
            android:id="@+id/budget_multiplier_field"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_spent"/>
        <EditText
            android:id="@+id/budget_money_spent_field"
            android:inputType="numberDecimal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/budget_remove_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_destination"/>

</LinearLayout>